--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "axios": "^0.21",
         "filepond": "^4.30.3",
+        "filepond-plugin-file-validate-size": "^2.2.5",
         "filepond-plugin-file-validate-type": "^1.2.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
